# smart-contract-using-the-latest-Metaplex-mpl-core-Anchor-dependencies

./: README.md
common/: mod.rs
deploy/: metaplex_nft_program-keypair.json
frontend/: README.md  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/components/: collections.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  wallet-provider.tsx
instructions/: initialize_collection.rs  mint_nft.rs  mod.rs  transfer_nft.rs  update_nft_metadata.rs
metaplex_nft_program_program/: Anchor.toml  Cargo.toml
program_client/: pda.ts  rpc.ts
src/: error.rs  lib.rs
state/: mod.rs  nft_collection.rs  nft_mint.rs
sup/: Anchor.toml  Cargo.toml  lib.rs  package.json
tests/: initialize_collection.rs  metaplex-nft-program.ts  metaplex_nft_program.ts  mint_nft.rs  transfer_nft.rs  update_nft_metadata.rs
